# code-similarity-search-in-large-codebases

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  all.py  indexing.py  performance.py  plots.py  pyproject.toml  requirements.txt  testcodebert.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  RESULTS.md
examples/: quickstart.py
individual/: annoy_.py  elastic2_.py  elastic_.py  faiss_.py  hnsw_.py  scann_.py  scikit.py
src/similarity_search/: __init__.py  utils.py
tests/: test_utils.py
